# ai-lfred

./: .gitignore  README.md  pyproject.toml
ailfred/: ailfred-cli.py  ailfred.py  constants.py  feed_db.py  helper.py  main.py  rag_helper.py  upload_file.py
